greeter/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter
  labels:
    app: greeter
    service: greeter-service
spec:
  selector:
    matchLabels:
      app: greeter
      service: greeter-service
  template:
    metadata:
      labels:
        app: greeter
        service: greeter-service
    spec:
      containers:
        - name: greeter
          ports:
            - protocol: TCP
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/healtz
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 100
          image: locura/gitops_greeter:v0.1.0
  replicas: 1
  strategy:
    type: Recreate
